--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
                             Argentina, Buenos Aires.
                         </p>
                     </div>
+                    <p class="m-0 text-center text-white">Develop by <a href="https://github.com/lorddesert">@lorddesert</a></p>
+
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Redes Sociales</h4>
