add cinemagraph to the masthead

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </nav>
         <!-- Masthead-->
         <header class="masthead bg-primary text-white text-center">
+            <div class="header-background"></div>
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
                 <!-- Masthead Heading-->
@@ -171,12 +172,12 @@
             </div>
         </section>
         <!-- Request Section Form-->
-        <section class="page-section" id="request">
+        <section class="page-section text-white bg-primary" id="request">
             <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Pedidos</h2>
+                <h2 class="page-section-heading text-center text-uppercase mb-0">Pedidos</h2>
                 <!-- Icon Divider-->
-                <div class="divider-custom">
+                <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
